--- a/assets/stylesheets/main_free.css
+++ b/assets/stylesheets/main_free.css
@@ -1527,6 +1527,10 @@ table thead {
   font-weight: 500;
 }
 
+table tbody.center td:first-child {
+  text-align: left;
+}
+
 /* ======================== Selection ===================== */
 select {
   padding: 2px 2px;
